// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render whithout problem on center 1`] = `
.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c0 {
  height: 4rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  width: auto;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c4 {
  height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
  background-color: hsl(200,74%,46%);
  color: hsl(0,100%,100%);
}

.c5:hover {
  background-color: hsl(207,22%,90%);
}

.c5:hover {
  background-color: #14638a;
}

.c6 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
}

.c6:hover {
  background-color: hsl(207,22%,90%);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-right: 1px solid hsl(207,22%,90%);
  margin-right: 1rem;
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-left: 1px solid hsl(207,22%,90%);
  margin-left: 1rem;
  cursor: pointer;
}

<div
  class="c0"
  data-testid="pagination-main-container"
>
  <div
    class="c1"
    data-testid="pagination-container"
  >
    <div
      class="c2"
      data-testid="arrow-left"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M335.085 368.915c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-128-128c-8.331-8.331-8.331-21.839 0-30.17l128-128c8.331-8.331 21.839-8.331 30.17 0 8.331 8.331 8.331 21.839 0 30.17L222.17 256l112.915 112.915z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="page-1"
      >
        1
      </div>
      <div
        class="c6"
        data-testid="page-2"
      >
        2
      </div>
    </div>
    <div
      class="c7"
      data-testid="arrow-right"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176.915 143.085c-8.331-8.331-8.331-21.839 0-30.17 8.331-8.331 21.839-8.331 30.17 0l128 128c8.331 8.331 8.331 21.839 0 30.17l-128 128c-8.331 8.331-21.839 8.331-30.17 0-8.331-8.331-8.331-21.839 0-30.17L289.83 256 176.915 143.085z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render whithout problem on left 1`] = `
.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c0 {
  height: 4rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  width: auto;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c4 {
  height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
  background-color: hsl(200,74%,46%);
  color: hsl(0,100%,100%);
}

.c5:hover {
  background-color: hsl(207,22%,90%);
}

.c5:hover {
  background-color: #14638a;
}

.c6 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
}

.c6:hover {
  background-color: hsl(207,22%,90%);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-right: 1px solid hsl(207,22%,90%);
  margin-right: 1rem;
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-left: 1px solid hsl(207,22%,90%);
  margin-left: 1rem;
  cursor: pointer;
}

<div
  class="c0"
  data-testid="pagination-main-container"
>
  <div
    class="c1"
    data-testid="pagination-container"
  >
    <div
      class="c2"
      data-testid="arrow-left"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M335.085 368.915c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-128-128c-8.331-8.331-8.331-21.839 0-30.17l128-128c8.331-8.331 21.839-8.331 30.17 0 8.331 8.331 8.331 21.839 0 30.17L222.17 256l112.915 112.915z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="page-1"
      >
        1
      </div>
      <div
        class="c6"
        data-testid="page-2"
      >
        2
      </div>
    </div>
    <div
      class="c7"
      data-testid="arrow-right"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176.915 143.085c-8.331-8.331-8.331-21.839 0-30.17 8.331-8.331 21.839-8.331 30.17 0l128 128c8.331 8.331 8.331 21.839 0 30.17l-128 128c-8.331 8.331-21.839 8.331-30.17 0-8.331-8.331-8.331-21.839 0-30.17L289.83 256 176.915 143.085z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render without a problem 1`] = `
.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c0 {
  height: 4rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  width: auto;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c4 {
  height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
  background-color: hsl(200,74%,46%);
  color: hsl(0,100%,100%);
}

.c5:hover {
  background-color: hsl(207,22%,90%);
}

.c5:hover {
  background-color: #14638a;
}

.c6 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
}

.c6:hover {
  background-color: hsl(207,22%,90%);
}

.c7 {
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-right: 1px solid hsl(207,22%,90%);
  margin-right: 1rem;
  cursor: pointer;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-left: 1px solid hsl(207,22%,90%);
  margin-left: 1rem;
  cursor: pointer;
}

<div
  class="c0"
  data-testid="pagination-main-container"
>
  <div
    class="c1"
    data-testid="pagination-container"
  >
    <div
      class="c2"
      data-testid="arrow-left"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M335.085 368.915c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-128-128c-8.331-8.331-8.331-21.839 0-30.17l128-128c8.331-8.331 21.839-8.331 30.17 0 8.331 8.331 8.331 21.839 0 30.17L222.17 256l112.915 112.915z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="page-1"
      >
        1
      </div>
      <div
        class="c6"
        data-testid="page-2"
      >
        2
      </div>
      <div
        class="c7"
      >
        ...
      </div>
      <div
        class="c6"
        data-testid="page-10"
      >
        10
      </div>
    </div>
    <div
      class="c8"
      data-testid="arrow-right"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176.915 143.085c-8.331-8.331-8.331-21.839 0-30.17 8.331-8.331 21.839-8.331 30.17 0l128 128c8.331 8.331 8.331 21.839 0 30.17l-128 128c-8.331 8.331-21.839 8.331-30.17 0-8.331-8.331-8.331-21.839 0-30.17L289.83 256 176.915 143.085z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render without a problem without large number of pages 1`] = `
.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c0 {
  height: 4rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  width: auto;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c4 {
  height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
  background-color: hsl(200,74%,46%);
  color: hsl(0,100%,100%);
}

.c5:hover {
  background-color: hsl(207,22%,90%);
}

.c5:hover {
  background-color: #14638a;
}

.c6 {
  border-radius: 0.4rem;
  background-color: hsl(0,100%,100%);
  height: 3rem;
  width: 3rem;
  line-heigh: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(206,23%,69%);
  cursor: pointer;
}

.c6:hover {
  background-color: hsl(207,22%,90%);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-right: 1px solid hsl(207,22%,90%);
  margin-right: 1rem;
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  border-left: 1px solid hsl(207,22%,90%);
  margin-left: 1rem;
  cursor: pointer;
}

<div
  class="c0"
  data-testid="pagination-main-container"
>
  <div
    class="c1"
    data-testid="pagination-container"
  >
    <div
      class="c2"
      data-testid="arrow-left"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M335.085 368.915c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-128-128c-8.331-8.331-8.331-21.839 0-30.17l128-128c8.331-8.331 21.839-8.331 30.17 0 8.331 8.331 8.331 21.839 0 30.17L222.17 256l112.915 112.915z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="page-1"
      >
        1
      </div>
      <div
        class="c6"
        data-testid="page-2"
      >
        2
      </div>
    </div>
    <div
      class="c7"
      data-testid="arrow-right"
    >
      <div
        class="c3"
        data-testid="iconContainer"
        height="20"
        width="20"
      >
        <svg
          data-testid="iconSvg"
          height="20"
          style="display: block;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176.915 143.085c-8.331-8.331-8.331-21.839 0-30.17 8.331-8.331 21.839-8.331 30.17 0l128 128c8.331 8.331 8.331 21.839 0 30.17l-128 128c-8.331 8.331-21.839 8.331-30.17 0-8.331-8.331-8.331-21.839 0-30.17L289.83 256 176.915 143.085z"
            data-testid="iconSvgPath"
            fill="hsl(207,22%,90%)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
